# claude_parser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  annotation_schema.md  architecture.md  content.py  notes.md  opencode.json  partially_correct_notes.md  plan.md  pyproject.toml  summary.md  temp
.opencode/: package.json
docs/: annotation_schema.txt
notes/: 07_04_26.txt  architecture_chat.txt  architecture_chat_2.txt  example.py  first_attempt.md  integration_test_04_04_26.txt  new_prompt.txt  new_prompt_06_05_26.md  notes_02_04_26.txt  notes_03_04_25.txt  notes_04_04_26.txt  notes_05_04_26  notes_06_04_26.txt  notes_08_04_26.txt  notes_for_tomorrow.txt  old_annotation_schema.txt  plan.md  post_integration_tests_04_04_04_26.txt
plan/: diary.md  plan_1.md  plan_2.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md  scrutiny.md
prompts/: task_skill.md
rough_notes/: debug_notes.txt  fix_schema_1.md  fix_schema_2.md  more_issues.md  new_prompt.txt  notes_03_04_25.txt  notes_04_04_26.txt  notes_05_04_26_further.txt  notes_05_04_26_inital.txt  post_integration_tests_04_04_04_26.txt
scratch/: debug.py  play_state.py  quick.py  test_out_1.md
src/: content.py  tree.py
src/adapters/: json_adapter.py
src/claude_parser/: cli.py  config.py  content.py  tree.py  validator_cli.py
src/claude_parser/adapters/: batch_mcp_server.py  claude_cli.py  filesystem_state_store.py  git_adapter.py  (+2 more)
tests/: test_annotation_parser.py  test_annotation_tree_builder.py  test_batch_tools_service.py  test_content.py  test_filesystem_state.py  test_json_adapter.py  test_merge.py  test_run_engine.py  test_serialization_roundtrip.py  test_tree.py  test_validator.py
tests/fixtures/: basic_tree.json  invalid_ordering.json
(+43 files in other folders)
