[project]
name = "claude-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tiktoken>=0.12.0",
]

[project.scripts]
claude-parser-validate = "claude_parser.validator_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_parser"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
